tests/compile-fail/integration_suite__integration__general__local_void.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: void-typed variable
   ┌─ <input>:28:9
   │
28 │         void x = delete();
   │         ^^^^ variables must have a value


